fixed alignments on phone

--- a/src/styles/components/home-filter.scss
+++ b/src/styles/components/home-filter.scss
@@ -8,8 +8,8 @@
     background-color: white;
     z-index: 8888;
     box-sizing: border-box;
-    padding-left: 20px;
-    padding-top: 20px;
+    padding-left: 25px;
+    padding-top: 25px;
     height: 100%;
   }
 
